# schani_thumbnailer

./: Cargo.toml  Dockerfile  README.md
src/: lib.rs  main.rs
src/service/: mod.rs  thumbnailservice.rs
src/web/: extractors.rs  handlers.rs  middlewares.rs  router.rs  webservice.rs
